finish changing item pages from js to html

--- a/html/item/decoration.html
+++ b/html/item/decoration.html
@@ -10,7 +10,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../../css/index.css">
     <link rel="stylesheet" href="../../css/item.css">
-    <script type="text/javascript" src="../../js/item.js"></script>
+    <script type="text/javascript" src="../../js/common.js"></script>
   </head>
   <body>
     <div class="wrapper">
@@ -18,7 +18,105 @@
       <div id="sidebar" class="box sidebar"></div>
       <div id="content" class="box content">
         <div>
-          <div id="item_summary_table"></div>
+          <div id="item_summary_table">
+            <h2 class="page_heading">Decoration Summary</h2>
+            <table>
+              <thead>
+                <tr>
+                  <th scope="col">Name</th>
+                  <th scope="col">Location</th>
+                  <th scope="col">Info</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td scope="row" data-label="Name">2F Roof Decoration</td>
+                  <td data-label="Seal">Shrine's Hidden Hole (10F+)</td>
+                  <td data-label="Info">-</td>
+                </tr>
+                <tr>
+                  <td scope="row" data-label="Name">3F Roof Decoration</td>
+                  <td data-label="Seal">Shrine's Hidden Hole (20F+)</td>
+                  <td data-label="Info">-</td>
+                </tr>
+                <tr>
+                  <td scope="row" data-label="Name">Big Catch Banner</td>
+                  <td data-label="Seal">Shrine's Hidden Hole (50F+)</td>
+                  <td data-label="Info">-</td>
+                </tr>
+                <tr>
+                  <td scope="row" data-label="Name">Carp Streamer</td>
+                  <td data-label="Seal">Complete Monster Kingdom</td>
+                  <td data-label="Info">-</td>
+                </tr>
+                <tr>
+                  <td scope="row" data-label="Name">Laundry</td>
+                  <td data-label="Seal">Halfway Well (10F+)</td>
+                  <td data-label="Info">-</td>
+                </tr>
+                <tr>
+                  <td scope="row" data-label="Name">Origami Decoration</td>
+                  <td data-label="Seal">Halfway Well (20F+)</td>
+                  <td data-label="Info">-</td>
+                </tr>
+                <tr>
+                  <td scope="row" data-label="Name">Moat Koi</td>
+                  <td data-label="Seal">Halfway Well (50F+)</td>
+                  <td data-label="Info">-</td>
+                </tr>
+                <tr>
+                  <td scope="row" data-label="Name">Silver Shachihoko</td>
+                  <td data-label="Seal">Sealed Room (10F+)</td>
+                  <td data-label="Info">-</td>
+                </tr>
+                <tr>
+                  <td scope="row" data-label="Name">Pinwheel</td>
+                  <td data-label="Seal">Sealed Room (20F+)</td>
+                  <td data-label="Info">-</td>
+                </tr>
+                <tr>
+                  <td scope="row" data-label="Name">Gold Shachihoko</td>
+                  <td data-label="Seal">Sealed Room (30F+)</td>
+                  <td data-label="Info">-</td>
+                </tr>
+                <tr>
+                  <td scope="row" data-label="Name">Kite</td>
+                  <td data-label="Seal">Sealed Room (50F+)</td>
+                  <td data-label="Info">-</td>
+                </tr>
+                <tr>
+                  <td scope="row" data-label="Name">Footman Kite</td>
+                  <td data-label="Seal">Sealed Room (70F+)</td>
+                  <td data-label="Info">-</td>
+                </tr>
+                <tr>
+                  <td scope="row" data-label="Name">Ad Balloon</td>
+                  <td data-label="Seal">Sealed Room (Rescue all children)</td>
+                  <td data-label="Info">-</td>
+                </tr>
+                <tr>
+                  <td scope="row" data-label="Name">All Nations Flag</td>
+                  <td data-label="Seal">Road to the End (50F+)</td>
+                  <td data-label="Info">-</td>
+                </tr>
+                <tr>
+                  <td scope="row" data-label="Name">Parabolic Antenna</td>
+                  <td data-label="Seal">Road to the End (60F+)</td>
+                  <td data-label="Info">-</td>
+                </tr>
+                <tr>
+                  <td scope="row" data-label="Name">Dragon Shachihoko</td>
+                  <td data-label="Seal">Road to the End (80F+)</td>
+                  <td data-label="Info">-</td>
+                </tr>
+                <tr>
+                  <td scope="row" data-label="Name">Gold Shiren Statue</td>
+                  <td data-label="Seal">Road to the End (Clear Reward)</td>
+                  <td data-label="Info">-</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
           <div id="item_details"></div>
         </div>
       </div>
